--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,6 +1,6 @@
 div {
-	border: 2px solid;
+	border: 2px solid red;
 	border-radius: 5px;
-	margin: 10px;
-	padding: 10px;
+	margin: 3px;
+	padding: 3px;
 }
