added validation for design and order, design validation not working

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -59,6 +59,15 @@
 			<div>
 				<h3>Name you Taco creation:</h3>
 				<input type="text" th:field=*{name}/>
+				<span class="validationError"
+					th:if="${#fields.hasErrors('name')}"
+					th:errors="*{name}"
+				>Name Errors</span>
+				
+				<span class="validationError"
+					th:if="${#fields.hasErrors('ingredients')}"
+					th:errors="*{ingredients}"
+				>Ingredients Errors</span>
 				<br/>
 				
 				<input type="submit" value="Submit Your Taco"/>
