fixed design controller, but still not working completely

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -13,7 +13,7 @@
 		<h1>Design Your Taco</h1>
 		<img th:src="@{/images/TacoCloud.jpg}" width="100" height="100">
 		
-		<form method="post" th:object="${design}">
+		<form method="post" th:object="${taco}">
 			<div class="grid">
 				<div class="ingredient-group" id="wraps">
 					<h3>Designate your wrap:</h3>
