added order repository and taco repository

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -18,7 +18,7 @@
 				<div class="ingredient-group" id="wraps">
 					<h3>Designate your wrap:</h3>
 					<div th:each="ingredient: ${wrap}">
-						<input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
+						<input name="ingredients" type="checkbox" th:value="${ingredient.id}" th:checked="${taco.getIngredients().contains(ingredient.id)}"/>
 						<span th:text="${ingredient.name}">INGREDIENT</span>
 					</div>
 				</div>
@@ -26,7 +26,7 @@
 				<div class="ingredient-group" id="proteins">
 					<h3>Pick your protein:</h3>
 					<div th:each="ingredient: ${protein}">
-						<input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
+						<input name="ingredients" type="checkbox" th:value="${ingredient.id}" th:checked="${taco.getIngredients().contains(ingredient.id)}"/>
 						<span th:text="${ingredient.name}">INGREDIENT</span>
 					</div>
 				</div>
@@ -34,7 +34,7 @@
 				<div class="ingredient-group" id="cheese">
 					<h3>Choose your cheese:</h3>
 					<div th:each="ingredient: ${cheese}">
-						<input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
+						<input name="ingredients" type="checkbox" th:value="${ingredient.id}" th:checked="${taco.getIngredients().contains(ingredient.id)}"/>
 						<span th:text="${ingredient.name}">INGREDIENT</span>
 					</div>
 				</div>
@@ -42,7 +42,7 @@
 				<div class="ingredient-group" id="veggies">
 					<h3>Determine your veggies:</h3>
 					<div th:each="ingredient: ${veggies}">
-						<input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
+						<input name="ingredients" type="checkbox" th:value="${ingredient.id}" th:checked="${taco.getIngredients().contains(ingredient.id)}"/>
 						<span th:text="${ingredient.name}">INGREDIENT</span>
 					</div>
 				</div>
@@ -50,7 +50,7 @@
 				<div class="ingredient-group" id="sauces">
 					<h3>Select your sauce:</h3>
 					<div th:each="ingredient: ${sauce}">
-						<input name="ingredients" type="checkbox" th:value="${ingredient.id}"/>
+						<input name="ingredients" type="checkbox" th:value="${ingredient.id}" th:checked="${taco.getIngredients().contains(ingredient.id)}"/>
 						<span th:text="${ingredient.name}">INGREDIENT</span>
 					</div>
 				</div>
@@ -60,14 +60,15 @@
 				<h3>Name you Taco creation:</h3>
 				<input type="text" th:field=*{name}/>
 				<span class="validationError"
+					th:if="${#fields.hasErrors('ingredients')}"
+					th:errors="*{ingredients}"
+				>Ingredients Errors</span>
+				
+				<span class="validationError"
 					th:if="${#fields.hasErrors('name')}"
 					th:errors="*{name}"
 				>Name Errors</span>
 				
-				<span class="validationError"
-					th:if="${#fields.hasErrors('ingredients')}"
-					th:errors="*{ingredients}"
-				>Ingredients Errors</span>
 				<br/>
 				
 				<input type="submit" value="Submit Your Taco"/>
